  provide partial protection.
* Reflection no longer reflects breaths (except disintegration).
* Instant petrification completely replaced with delayed petrification: you will
  always have a few turns to save yourself from instant death.
* Drawbridge instant death removed: drawbridges can only be destroyed by force
  bolts when closed, not open.
* Sokoban prizes moved to Mines End, making Sokoban much more optional.
* Nymph level moved into Town branch; Town shops are larger to compensate.
* Effect of skills on to-hit and damage raised in general.
* Slings now get damage bonuses from strength and enchantment.
* Spells can be aborted at direction, position and item prompts without using
  power or hunger.
* New `repeat_prefix` keymap and `repeat_num_auto` option for people accustomed
  to NetHack's classic number key movement scheme.
* Potion color alchemy improved in favor of players, making it more of an
  alternative to NetHack's alchemy instead of a nerf.
* Curses on armor, jewelry and eyewear are now revealed when they are worn
  instead of when trying to take them off.
* More messages for things that used to happen silently: uncontrolled
  teleportation, finding secret doors/corridors while searching, items becoming
  randomly cursed.
* Iron bars can be destroyed by acid or eaten by certain monsters.

Character
---------
* Resistances gained from corpses and crowning only provide partial protection,
  and resistances from your race/role or from worn equipment are immunities
  (based on L's partial resistance patch).  Exact partial resistance effects:
    - fire, cold, shock: half damage
    - sleep: half duration, doubled chance to awaken from combat
    - disintegration: 90% chance to resist
    - poison: half damage, having any protects against other effects
* Reflection no longer reflects breaths; disintegration breath is treated as a
  beam to prevent unfair deaths due to this change.  The breath graphic has been
  changed accordingly.