@@ -1684,12 +1684,14 @@ int domove(schar dx, schar dy, schar dz)
 		    if (distu(u.ustuck->mx, u.ustuck->my) > 2) {
 			/* perhaps it fled (or was teleported or ... ) */
 			u.ustuck = 0;
+			u.uwilldrown = 0;
 		    } else if (sticks(youmonst.data)) {
 			/* When polymorphed into a sticking monster,
 			 * u.ustuck means it's stuck to you, not you to it.
 			 */
 			pline("You release %s.", mon_nam(u.ustuck));
 			u.ustuck = 0;
+			u.uwilldrown = 0;
 		    } else {
 			/* If holder is asleep or paralyzed:
 			 *	37.5% chance of getting away,
@@ -1705,6 +1707,7 @@ int domove(schar dx, schar dy, schar dz)
 			pull_free:
 			    pline("You pull free from %s.", mon_nam(u.ustuck));
 			    u.ustuck = 0;
+			    u.uwilldrown = 0;
 			    break;
 			case 3:
 			    if (!u.ustuck->mcanmove) {
